# DS---ex2

./: AVLrankTest.cpp  CMakeLists.txt  CoursesManager.h  HashChain.h  dynamicArray.h  dynamicTest.cpp  hashTest.cpp  library2.cpp  library2.h  linked_list.h  node.h  rankedAVL.h  testTrio.cpp  trio.cpp  trio.h  רטוב 2 - פתרון.docx
