cmake_minimum_required(VERSION 3.0.0)
project(tester)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
# set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE PATH "" FORCE)
set(MTM_FLAGS_DEBUG "-std=c++11 -Wall -Werror -pedantic-errors")
set(MTM_FLAGS_RELEASE "${MTM_FLAGS_DEBUG} -DNDBUG")
set(CMAKE_C_FLAGS ${MTM_FLAGS_DEBUG})
add_executable(tester dynamicArray.h linked_list.h rankedAVL.h HashChain.h CoursesManager.h library2.h library2.cpp main2.cpp trio.cpp)
